Closed Bug 892769 Opened 12 years ago Closed 12 years ago

WebGL fake-black-texture bug in DrawArrays and DrawElements

Categories

(Core :: Graphics: CanvasWebGL, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla25
Tracking Status
firefox22 --- wontfix
firefox23 --- wontfix
firefox24 --- fixed
firefox25 --- verified

People

(Reporter: guillaume.abadie, Assigned: guillaume.abadie)

References

Details

Attachments

(1 file)

Forget to undo fake black texture if fake vertex attribute 0 fail in WebGLContext::DrawArrays and WebGLContext::DrawElements.
Assignee: nobody → gabadie
Depends on: 892546
Blocks: 892546
No longer depends on: 892546
Fixing the problem
Attachment #774335 - Flags: review?(jgilbert)
Attachment #774335 - Flags: review?(jgilbert) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Comment on attachment 774335 [details] [diff] [review] patch for landing [Approval Request Comment] Bug caused by (feature/regressing bug #): WebGL User impact if declined: Some likely-erroneous draw calls can cause subsequent draw calls to render incorrectly. Testing completed (on m-c, etc.): m-c Risk to taking this patch (and alternatives if risky): very low String or IDL/UUID changes made by this patch: none I think the reward is small enough that we shouldn't try to take this in Beta, though.
Attachment #774335 - Flags: approval-mozilla-aurora?
Comment on attachment 774335 [details] [diff] [review] patch for landing low risk enough for aurora uplift and looks like a Fx22 WebGl regression.
Attachment #774335 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Guillaume, is there a testcase QA can use to verify this is fixed?
Flags: needinfo?(guillaume.abadie)
(In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #7) > Guillaume, is there a testcase QA can use to verify this is fixed? Yes, it has been committed in the official WebGL conformance test suite 1.0.3. But we don't run it on tbpl yet because we have the 1.0.1 and upgrading is very very painful right now.
Flags: needinfo?(guillaume.abadie)
Are there instructions or documentation on how to run the WebGL CTS 1.0.3?
(In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #9) > Are there instructions or documentation on how to run the WebGL CTS 1.0.3? https://www.khronos.org/registry/webgl/sdk/tests/webgl-conformance-tests.html
Thank you Benoit.
Keywords: verifyme
I tried running all the conformance tests on Firefox 25 beta 1, on Mac OS X 10.8.4 32bit and 64bit, Windows 7 64bit, and Ubuntu 13.04 32bit. On Mac and Ubuntu, the build freezes until it gets restarted manually. On Windows it crashed: https://crash-stats.mozilla.com/report/index/98e11a76-a56e-48c2-97a6-d29082130920. Which set(s) of tests should I run for this bug in particular?
Flags: needinfo?(bjacob)
(In reply to Ioana Budnar, QA [:ioana] from comment #12) > I tried running all the conformance tests on Firefox 25 beta 1, on Mac OS X > 10.8.4 32bit and 64bit, Windows 7 64bit, and Ubuntu 13.04 32bit. On Mac and > Ubuntu, the build freezes until it gets restarted manually. On Windows it > crashed: > https://crash-stats.mozilla.com/report/index/98e11a76-a56e-48c2-97a6- > d29082130920. Ouch. Yes, that 1.0.3 WebGL test suite is very heavy-hitting. Didn't realize that it brought both Mac and Windows on their knees. It appears that we have some more working-around-system-bugs to do... sorry. > > Which set(s) of tests should I run for this bug in particular? You only need to run this single test: https://www.khronos.org/registry/webgl/sdk/tests/conformance/textures/texture-fakeblack.html
Flags: needinfo?(bjacob)
Verified as fixed on Firefox 25 beta 3 (20130926170421), on Windows 7 64bit, Mac OSX 10.8.4 64bit and Ubuntu 13.04 32bit. The texture-fakeblack test passes every time.
Status: RESOLVED → VERIFIED
Keywords: verifyme
QA Contact: ioana.budnar
(In reply to Benoit Jacob [:bjacob] from comment #13) > (In reply to Ioana Budnar, QA [:ioana] from comment #12) > > I tried running all the conformance tests on Firefox 25 beta 1, on Mac OS X > > 10.8.4 32bit and 64bit, Windows 7 64bit, and Ubuntu 13.04 32bit. On Mac and > > Ubuntu, the build freezes until it gets restarted manually. On Windows it > > crashed: > > https://crash-stats.mozilla.com/report/index/98e11a76-a56e-48c2-97a6- > > d29082130920. > > Ouch. Yes, that 1.0.3 WebGL test suite is very heavy-hitting. Didn't realize > that it brought both Mac and Windows on their knees. It appears that we have > some more working-around-system-bugs to do... sorry. Benoit, do you need a follow-up bug report?
No, that would be too much of a grab-bag. There are probably upwards of 10 different issues to solve here. If you find a particular WebGL conformance test page (out of the hundreds there) that triggers some crash or other bad behavior on a particular OS/driver, then you are very welcome to file a bug on it, that is very useful, but be warned that doing it consistently for all the WebGL conformance tests is going to be a fairly large task (though a useful one).
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: