Bug 892769 - Fix a bug about fake black textures in WebGLContext. r=jgilbert